--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,6 @@ jobs:
         with:
           python-version: 3.7
       - run: pip install mkdocs-material
+      - run: pip install markdown-include
+      - run: pip install mkdocs-markdownextradata-plugin
       - run: mkdocs gh-deploy --force
