--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,8 @@ theme:
     accent: deep orange
   icon:
     repo: fontawesome/brands/github-alt
-  logo: img/icon-white.svg
-  favicon: img/favicon.png
+  logo: img/logo_white.png
+  favicon: img/logo_black.png
   language: en
 repo_name: till-io/till
 repo_url: https://github.com/till-io/till.git
